...

    let viewModel = QuestionsViewModel()

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Questions"
        // Uncomment the following line to preserve selection between presentations
        // self.clearsSelectionOnViewWillAppear = false
    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
...
    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        guard let item = viewModel.questionSet?[section] else { return 0 }
        return item.questions.count
    }

    override func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        guard let item = viewModel.questionSet?[section] else { return "N/A" }
        return item.category
    }
    
    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: "questionsTableViewCell", for: indexPath) as! QuestionsTableViewCell
        // Configure the cell...
...
